@@ -9,9 +9,10 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.annotation.web.configurers.CorsConfigurer;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.web.access.channel.ChannelProcessingFilter;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -27,17 +28,14 @@ import static org.springframework.http.HttpMethod.*;
 @EnableWebSecurity
 @EnableWebMvc
 @RequiredArgsConstructor
-public class WebSecurityConfig
-{
+public class WebSecurityConfig {
     private final JwtTokenFilter jwtTokenFilter;
     @Value("${api.prefix}")
     private String apiPrefix;
-
-
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    //Pair.of(String.format("%s/products", apiPrefix), "GET"),
+    public SecurityFilterChain securityFilterChain(HttpSecurity http)  throws Exception{
         http
-//                .csrf(AbstractHttpConfigurer::disable)
                 .addFilterBefore(jwtTokenFilter, UsernamePasswordAuthenticationFilter.class)
                 .authorizeHttpRequests(requests -> {
                     requests
@@ -49,37 +47,46 @@ public class WebSecurityConfig
 
                             .requestMatchers(GET,
                                     String.format("%s/roles**", apiPrefix)).permitAll()
-                            //categories
+
                             .requestMatchers(GET,
                                     String.format("%s/categories**", apiPrefix)).permitAll()
 
+                            .requestMatchers(GET,
+                                    String.format("%s/categories/**", apiPrefix)).permitAll()
+
                             .requestMatchers(POST,
-                                    String.format("%s/categories/**", apiPrefix)).hasRole(Role.ADMIN)
+                                    String.format("%s/categories/**", apiPrefix)).hasAnyRole(Role.ADMIN)
 
                             .requestMatchers(PUT,
-                                    String.format("%s/categories/**", apiPrefix)).hasRole(Role.ADMIN)
+                                    String.format("%s/categories/**", apiPrefix)).hasAnyRole(Role.ADMIN)
 
                             .requestMatchers(DELETE,
-                                    String.format("%s/categories/**", apiPrefix)).hasRole(Role.ADMIN)
-                            //product
+                                    String.format("%s/categories/**", apiPrefix)).hasAnyRole(Role.ADMIN)
+
+                            .requestMatchers(GET,
+                                    String.format("%s/products**", apiPrefix)).permitAll()
+
                             .requestMatchers(GET,
                                     String.format("%s/products/**", apiPrefix)).permitAll()
 
+                            .requestMatchers(GET,
+                                    String.format("%s/products/images/*", apiPrefix)).permitAll()
+
                             .requestMatchers(POST,
-                                    String.format("%s/products/**", apiPrefix)).hasRole(Role.ADMIN)
+                                    String.format("%s/products**", apiPrefix)).hasAnyRole(Role.ADMIN)
 
                             .requestMatchers(PUT,
-                                    String.format("%s/products/**", apiPrefix)).hasRole(Role.ADMIN)
+                                    String.format("%s/products/**", apiPrefix)).hasAnyRole(Role.ADMIN)
 
                             .requestMatchers(DELETE,
-                                    String.format("%s/products/**", apiPrefix)).hasRole(Role.ADMIN)
+                                    String.format("%s/products/**", apiPrefix)).hasAnyRole(Role.ADMIN)
 
-                            //order
+
                             .requestMatchers(POST,
-                                    String.format("%s/orders/**", apiPrefix)).hasRole(Role.USER)
+                                    String.format("%s/orders/**", apiPrefix)).hasAnyRole(Role.USER)
 
                             .requestMatchers(GET,
-                                    String.format("%s/orders/**", apiPrefix)).hasAnyRole(Role.USER, Role.ADMIN)
+                                    String.format("%s/orders/**", apiPrefix)).permitAll()
 
                             .requestMatchers(PUT,
                                     String.format("%s/orders/**", apiPrefix)).hasRole(Role.ADMIN)
@@ -87,36 +94,38 @@ public class WebSecurityConfig
                             .requestMatchers(DELETE,
                                     String.format("%s/orders/**", apiPrefix)).hasRole(Role.ADMIN)
 
-                            //order_detail
                             .requestMatchers(POST,
-                                    String.format("%s/order_details/**", apiPrefix)).hasRole(Role.ADMIN)
+                                    String.format("%s/order_details/**", apiPrefix)).hasAnyRole(Role.USER)
 
                             .requestMatchers(GET,
-                                    String.format("%s/order_details/**", apiPrefix)).hasAnyRole(Role.USER , Role.ADMIN)
+                                    String.format("%s/order_details/**", apiPrefix)).permitAll()
 
                             .requestMatchers(PUT,
                                     String.format("%s/order_details/**", apiPrefix)).hasRole(Role.ADMIN)
 
                             .requestMatchers(DELETE,
                                     String.format("%s/order_details/**", apiPrefix)).hasRole(Role.ADMIN)
+
 
                             .anyRequest().authenticated();
+                    //.anyRequest().permitAll();
 
                 })
                 .csrf(AbstractHttpConfigurer::disable);
-                http.cors(new Customizer<CorsConfigurer<HttpSecurity>>() {
-                    @Override
-                    public void customize(CorsConfigurer<HttpSecurity> httpSecurityCorsConfigurer) {
-                        CorsConfiguration configuration=new CorsConfiguration();
-                        configuration.setAllowedOrigins(List.of("*"));
-                        configuration.setAllowedMethods(Arrays.asList("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
-                        configuration.setAllowedHeaders(Arrays.asList("authorization","content-type","x-auth-token"));
-                        configuration.setExposedHeaders(List.of("x-auth-token"));
-                        UrlBasedCorsConfigurationSource source=new UrlBasedCorsConfigurationSource();
-                        source.registerCorsConfiguration("/**",configuration);
-                        httpSecurityCorsConfigurer.configurationSource(source);
-                    }
-                });
+        http.cors(new Customizer<CorsConfigurer<HttpSecurity>>() {
+            @Override
+            public void customize(CorsConfigurer<HttpSecurity> httpSecurityCorsConfigurer) {
+                CorsConfiguration configuration = new CorsConfiguration();
+                configuration.setAllowedOrigins(List.of("*"));
+                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+                configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
+                configuration.setExposedHeaders(List.of("x-auth-token"));
+                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                source.registerCorsConfiguration("/**", configuration);
+                httpSecurityCorsConfigurer.configurationSource(source);
+            }
+        });
+
         return http.build();
     }
 }
